# kalman

./: .gitignore  CMakeLists.txt
examples/ForceSteps/: README.md  __filter_csv_data.cpp  main.cpp  visualization.py
examples/Steps/: NonLinearPositionMeasurementModelLeg.hpp  NonLinearSystemModelLeg.hpp  PositionMeasurementModelLeg2.hpp  PositionMeasurementModel_X.hpp  SystemModelLeg.hpp  SystemModelLeg2.hpp  SystemModel_X.hpp  filter_csv_data.cpp  main.cpp  visualization.py  visualization_csv.py
include/kalman/: UnscentedKalmanFilter.hpp
ros2/: CMakeLists.txt  README.md  package.xml
ros2/src/: main.cpp  visualization.py
